--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,39 +1,95 @@
 * {
   padding: 0;
   margin: 0;
-  list-style-type: none;
 }
 
-header {
-  .nav_bar {
-    padding: 10px;
-    background-color: rgb(8, 8, 8);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-}
-
-main {
-  height: 100vh;
-  background-color: antiquewhite;
-  h1 {
-    padding-top: 50px;
-  }
-  .portada {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 100px;
-    .parrafo {
-      width: 500px;
+body {
+  header {
+    .nav_bar {
+      margin-top: 10px;
+      padding: 10px;
+      background-color: rgb(255, 255, 255);
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      img {
+        border-radius: 50px;
+        width: 100px;
+      }
+      ul {
+        display: flex;
+        li {
+          list-style-type: none;
+          .botonNav2 {
+            border-radius: 5px;
+            border-color: rgb(16, 57, 146);
+            background-color: rgb(18, 57, 143);
+            a {
+              text-decoration: none;
+              color: rgb(255, 255, 255);
+              padding: 10px;
+            }
+          }
+          .botonNav {
+            border-radius: 5px;
+            border-color: rgb(16, 57, 146);
+            background-color: rgb(18, 57, 143);
+            margin-right: 50px;
+            a {
+              text-decoration: none;
+              color: rgb(255, 255, 255);
+              padding: 10px;
+            }
+          }
+        }
+      }
     }
   }
-}
 
-footer {
-  background-color: rgb(231, 231, 231);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  main {
+    h1 {
+      padding-top: 50px;
+    }
+    .portada {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      margin-top: 50px;
+      .parrafo {
+        width: 500px;
+      }
+      .imagen2 {
+        img {
+          border-radius: 10px;
+        }
+      }
+    }
+    .botonFinal {
+      margin-top: 80px;
+      margin-bottom: 50px;
+      border-radius: 5px;
+      border-color: rgb(16, 57, 146);
+      background-color: rgb(18, 57, 143);
+      padding: 4px;
+      a {
+        text-decoration: none;
+        color: white;
+      }
+    }
+    .contacto {
+      h4 {
+        margin-top: 30px;
+        font-size: 2rem;
+      }
+      .redesSociales {
+        display: flex;
+        justify-content: space-around;
+        img {
+          margin-top: 50px;
+          margin-bottom: 50px;
+          width: 60px;
+        }
+      }
+    }
+  }
 }
